--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
-   <meta charset="utf-8"/>
-   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-   <title>VOXELICIOUS</title>
+    <meta charset="utf-8" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="A doll's experiments with three.js."/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Voxelicious</title>
   </head>
-  <body></body>
+  <body>
+  </body>
 </html>
